k8s/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate  # Important for stateful apps
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: mini
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: plex
          protocol: TCP
        - containerPort: 32400
          name: plex-udp
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: transcode
          mountPath: /transcode
        resources:
          limits:
            cpu: 7
            memory: 7Gi
          requests:
            cpu: 6
            memory: 6Gi
      volumes:
      - name: config
        hostPath:
          path: /storage/docker-volumes/plex_data_arm64
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
      - name: transcode
        emptyDir: {}
